[project]
name = "rainwave-streamer"
version = "5.0.0"
description = "rainwave.cc"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "av==13.0.0",
    "numpy==2.0.0",
    "python-shout==0.2.8",
]

[project.scripts]
rainwave-icecast-live = "rainwave.live_streamer:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
]

[tool.mypy]
files = "src/**/*.py"
mypy_path = ["src/typestubs"]
