[project]
name = "rainwave-streamer"
version = "0.0.1"
description = "rainwave.cc"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "numpy==2.4.2",
    "orjson==3.11.7",
    "python-shout==0.2.8",
    "psutil==7.2.2",
    "types-psutil>=7.2.2.20260130",
    "soxr>=1.0.0",
    "pymad>=0.11.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
]

[tool.mypy]
files = "src/**/*.py"
mypy_path = ["src", "src/typestubs"]
explicit_package_bases = true
