[project]
name = "rainwave-streamer"
version = "0.0.1"
description = "rainwave.cc"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "numpy==2.4.2",
    "psutil==7.2.2",
    "types-psutil==7.2.2.20260130",
    "pygobject==3.54.5",
    "pygobject-stubs==2.16.0",
    "emcache>=1.3.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
]

[tool.mypy]
files = "src/**/*.py"
mypy_path = ["src", "src/typestubs"]
explicit_package_bases = true
